--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1623,7 +1623,7 @@
 	}
 
 	body {
-		background-color: rgba(255, 227, 0, 0.5);
+		background-color: #DCF4FF;
 		background-image: linear-gradient(to top, #77cbfa, #9edcff), url("../../images/bg.jpg");
 		background-size: auto, cover;
 		background-attachment: fixed, fixed;
@@ -1696,7 +1696,8 @@
 		-webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-		border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
+		/*border-bottom: dotted 1px rgba(255, 255, 255, 0.35);*/
+		font-weight: 600;
 		color: #777777;
 		text-decoration: none;
 	}
@@ -1733,7 +1734,7 @@
 				-ms-transition: background-color 0.2s ease-in-out;
 				transition: background-color 0.2s ease-in-out;
 				border-radius: 100%;
-				border: solid 2px rgba(255, 255, 255, 0.125);
+				border: solid 2px rgba(0, 0, 0, 0.125);
 				content: '\f105';
 				display: inline-block;
 				font-size: 1.25em;
@@ -2977,7 +2978,7 @@
 					display: block;
 					font-family: Raleway, Helvetica, sans-serif;
 					font-size: 0.8em;
-					font-weight: 200;
+					font-weight: 600;
 					letter-spacing: 0.1em;
 					line-height: 1.85em;
 					padding: 0.75em 0;
@@ -3082,10 +3083,11 @@
 			opacity: 1;
 			border-bottom: solid 2px rgba(128, 128, 128, 0.125);
 			color: #ffdc00;
-			-webkit-text-stroke: 0.5px rgba(128, 128, 128, 0.8);
+			-webkit-text-stroke: 0.5px rgb(255, 172, 58);
 			font-size: 2.3em;
 			margin-bottom: 0.8em;
 			padding-bottom: 0.4em;
+			/*color: rgba(255, 172, 58, 0.8)*/
 		}
 
 		#banner p {
