--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2219,7 +2219,239 @@
 			.image.main img {
 				width: 100%;
 			}
+/* pic */
 
+	.pic {
+		border-radius: 5px;
+		border: 1px solid #3d3d3d;
+		display: inline-block;
+		position: relative;
+	}
+
+	.pic img {
+		border-radius: 5px;
+		display: block;
+	}
+
+	.pic.left, .image.right {
+		max-width: 40%;
+	}
+
+	.pic.left img, .image.right img {
+		width: 100%;
+	}
+
+	.pic.left {
+		float: left;
+		padding: 0 1.5em 1em 0;
+		top: 0.25em;
+	}
+
+	.pic.right {
+		float: right;
+		padding: 0 0 1em 1.5em;
+		top: 0.25em;
+	}
+
+	.pic.fit {
+		display: block;
+		margin: 0 0 2em 0;
+		width: 100%;
+	}
+
+	.pic.fit img {
+		width: 100%;
+	}
+
+	.pic.main {
+		display: block;
+		margin: 0 0 3em 0;
+		width: 100%;
+	}
+
+	.pic.main img {
+		width: 100%;
+	}
+
+/* Poptrox Popup */
+
+	.poptrox-overlay {
+		-webkit-tap-highlight-color: rgba(255, 220, 0, 0);
+	}
+
+	.poptrox-popup {
+		background: rgba(255, 220, 0, 0.92);
+		box-shadow: 0 1em 3em 0.5em rgba(0, 0, 0, 0.25);
+		cursor: default;
+	}
+
+	.poptrox-popup:before {
+		-moz-transition: opacity 0.2s ease-in-out;
+		-webkit-transition: opacity 0.2s ease-in-out;
+		-ms-transition: opacity 0.2s ease-in-out;
+		transition: opacity 0.2s ease-in-out;
+		background-image: -moz-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -moz-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
+		background-image: -webkit-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -webkit-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
+		background-image: -ms-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -ms-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
+		background-image: linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: 1;
+		opacity: 1;
+	}
+
+	.poptrox-popup .closer {
+		-moz-transition: opacity 0.2s ease-in-out;
+		-webkit-transition: opacity 0.2s ease-in-out;
+		-ms-transition: opacity 0.2s ease-in-out;
+		transition: opacity 0.2s ease-in-out;
+		background-image: url("../../../../Angular/poptroxtest/css/images/close.svg");
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: 3em;
+		height: 5em;
+		opacity: 0;
+		position: absolute;
+		right: 0;
+		top: 0;
+		width: 5em;
+		z-index: 2;
+	}
+
+	.poptrox-popup .nav-previous,
+	.poptrox-popup .nav-next {
+		-moz-transition: opacity 0.2s ease-in-out;
+		-webkit-transition: opacity 0.2s ease-in-out;
+		-ms-transition: opacity 0.2s ease-in-out;
+		transition: opacity 0.2s ease-in-out;
+		background-image: url("../../../../Angular/poptroxtest/css/images/arrow.svg");
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: 5em;
+		cursor: pointer;
+		height: 8em;
+		margin-top: -4em;
+		opacity: 0;
+		position: absolute;
+		top: 50%;
+		width: 6em;
+		z-index: 2;
+	}
+
+	.poptrox-popup .nav-previous {
+		-moz-transform: scaleX(-1);
+		-webkit-transform: scaleX(-1);
+		-ms-transform: scaleX(-1);
+		transform: scaleX(-1);
+		left: 0;
+	}
+
+	.poptrox-popup .nav-next {
+		right: 0;
+	}
+
+	.poptrox-popup .caption {
+		padding: 2em 2em 0.1em 2em ;
+		background-image: -moz-linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%);
+		background-image: -webkit-linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%);
+		background-image: -ms-linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%);
+		background-image: linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%);
+		bottom: 0;
+		cursor: default;
+		left: 0;
+		position: absolute;
+		text-align: left;
+		width: 100%;
+		z-index: 2;
+	}
+
+	.poptrox-popup .caption h2, .poptrox-popup .caption h3, .poptrox-popup .caption h4, .poptrox-popup .caption h5, .poptrox-popup .caption h6 {
+		margin: 0 0 0.5em 0;
+	}
+
+	.poptrox-popup .caption p {
+		color: #ffffff;
+	}
+
+	.poptrox-popup .loader {
+		-moz-animation: spinner 1s infinite linear !important;
+		-webkit-animation: spinner 1s infinite linear !important;
+		-ms-animation: spinner 1s infinite linear !important;
+		animation: spinner 1s infinite linear !important;
+		background-image: url("../../../../Angular/poptroxtest/css/images/spinner.svg");
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain;
+		display: block;
+		font-size: 2em;
+		height: 2em;
+		left: 50%;
+		line-height: 2em;
+		margin: -1em 0 0 -1em;
+		opacity: 0.25;
+		position: absolute;
+		text-align: center;
+		top: 50%;
+		width: 2em;
+	}
+
+	.poptrox-popup:hover .closer,
+	.poptrox-popup:hover .nav-previous,
+	.poptrox-popup:hover .nav-next {
+		opacity: 0.5;
+	}
+
+	.poptrox-popup:hover .closer:hover,
+	.poptrox-popup:hover .nav-previous:hover,
+	.poptrox-popup:hover .nav-next:hover {
+		opacity: 1.0;
+	}
+
+	.poptrox-popup.loading:before {
+		opacity: 0;
+	}
+
+	body.touch .poptrox-popup .closer,
+	body.touch .poptrox-popup .nav-previous,
+	body.touch .poptrox-popup .nav-next {
+		opacity: 1.0 !important;
+	}
+
+	@media screen and (max-width: 980px) {
+
+		.poptrox-popup .closer {
+			background-size: 3em;
+		}
+
+		.poptrox-popup .nav-previous,
+		.poptrox-popup .nav-next {
+			background-size: 4em;
+		}
+
+	}
+
+	@media screen and (max-width: 736px) {
+
+		.poptrox-popup:before {
+			display: none;
+		}
+
+		.poptrox-popup .caption {
+			display: none !important;
+		}
+
+		.poptrox-popup .closer,
+		.poptrox-popup .nav-previous,
+		.poptrox-popup .nav-next {
+			display: none !important;
+		}
+
+	}
 /* List */
 
 	ol {
@@ -3204,6 +3436,88 @@
 			-ms-filter: blur(2px);
 			filter: blur(2px);
 		}
+/* Gallery */
+
+#gallery {
+	-moz-transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, -moz-filter 0.5s ease;
+	-webkit-transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, -webkit-filter 0.5s ease;
+	-ms-transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, -ms-filter 0.5s ease;
+	transition: -moz-filter 0.5s ease, -webkit-filter 0.5s ease, -ms-filter 0.5s ease, filter 0.5s ease;
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+#gallery .thumb {
+	-moz-transition: opacity 1.25s ease-in-out;
+	-webkit-transition: opacity 1.25s ease-in-out;
+	-ms-transition: opacity 1.25s ease-in-out;
+	transition: opacity 1.25s ease-in-out;
+	-moz-pointer-events: auto;
+	-webkit-pointer-events: auto;
+	-ms-pointer-events: auto;
+	pointer-events: auto;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	opacity: 1;
+	overflow: hidden;
+	position: relative;
+}
+
+#gallery .thumb:after {
+	background-image: -moz-linear-gradient(to top, rgba(10,17,25,0.35) 5%, rgba(10,17,25,0) 35%);
+	background-image: -webkit-linear-gradient(to top, rgba(10,17,25,0.35) 5%, rgba(10,17,25,0) 35%);
+	background-image: -ms-linear-gradient(to top, rgba(10,17,25,0.35) 5%, rgba(10,17,25,0) 35%);
+	background-image: linear-gradient(to top, rgba(10,17,25,0.35) 5%, rgba(10,17,25,0) 35%);
+	-moz-pointer-events: none;
+	-webkit-pointer-events: none;
+	-ms-pointer-events: none;
+	pointer-events: none;
+	background-size: cover;
+	content: '';
+	display: block;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+#gallery .thumb > .image {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border: 0;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+#gallery .thumb > h2 {
+	-moz-pointer-events: none;
+	-webkit-pointer-events: none;
+	-ms-pointer-events: none;
+	pointer-events: none;
+	bottom: 1.875em;
+	font-size: 0.8em;
+	font-weight: 600;
+	left: 2.1875em;
+	margin: 0;
+	position: absolute;
+	z-index: 1;
+}
+
+#gallery .thumb > p {
+	display: none;
+}
 
 /* Wrapper */
 
